[package]
name = "konkeri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiled = "0.10.2"
sdl2 = { version="0.36", default-features=false, features=["ttf","image","mixer"] }
clap = { version="4.0.29", features=["derive"]}
chrono = "0.4.31"
